# bevy_ro_client

./: .gitignore  Cargo.toml  README.md  justfile  shell.nix  typos.toml
asset_crates/ragnarok_act/: Cargo.toml
asset_crates/ragnarok_act/src/: animation_clip.rs  animation_event.rs  assets.rs  components.rs  events.rs  lib.rs  warnings.rs
asset_crates/ragnarok_act/src/plugin/: debug.rs  loader.rs  mod.rs  resources.rs
asset_crates/ragnarok_gnd/: Cargo.toml
asset_crates/ragnarok_gnd/src/: error.rs  ground_mesh_cube.rs  lib.rs  surface.rs  warnings.rs
asset_crates/ragnarok_grf/: Cargo.toml
asset_crates/ragnarok_grf/src/: error.rs  header.rs  lib.rs  reader.rs
asset_crates/ragnarok_pal/: Cargo.toml
asset_crates/ragnarok_pal/src/: components.rs  lib.rs  warnings.rs
asset_crates/ragnarok_pal/src/plugin/: loader.rs  mod.rs
asset_crates/ragnarok_rsm/: Cargo.toml
asset_crates/ragnarok_rsm/src/: assets.rs  components.rs  error.rs  lib.rs  volume_box.rs  warnings.rs
asset_crates/ragnarok_rsm/src/materials/: mod.rs
asset_crates/ragnarok_rsm/src/mesh/: face.rs  mod.rs  position_key_frame.rs  scale_key_frame.rs  texture_animation.rs  texture_uv.rs  warnings.rs
asset_crates/ragnarok_rsm/src/plugin/: debug.rs  loader.rs  materials.rs  mod.rs  systems.rs
asset_crates/ragnarok_rsw/: Cargo.toml
asset_crates/ragnarok_rsw/src/: assets.rs  components.rs  error.rs  lib.rs  light.rs  lighting_params.rs  model.rs  quad_tree.rs  sound.rs  warnings.rs
asset_crates/ragnarok_rsw/src/plugin/: debug.rs  loader.rs  mod.rs
asset_crates/ragnarok_spr/: Cargo.toml
asset_crates/ragnarok_spr/src/: assets.rs  components.rs  error.rs  indexed.rs  lib.rs  true_color.rs  warnings.rs
asset_crates/ragnarok_water_plane/: Cargo.toml
asset_crates/ragnarok_water_plane/src/: lib.rs
bevy_crates/bevy_ragnarok_act/: Cargo.toml
bevy_crates/bevy_ragnarok_act/src/: lib.rs
bevy_crates/bevy_ragnarok_camera/: Cargo.toml
bevy_crates/bevy_ragnarok_camera/src/: lib.rs  plugin.rs
bevy_crates/bevy_ragnarok_gat/: Cargo.toml
bevy_crates/bevy_ragnarok_gat/examples/: load_gat.rs
bevy_crates/bevy_ragnarok_gat/src/: assets.rs  debug.rs  lib.rs  loader.rs  plugin.rs
bevy_crates/bevy_ragnarok_gnd/: Cargo.toml
bevy_crates/bevy_ragnarok_gnd/src/: assets.rs  components.rs  debug.rs  lib.rs  loader.rs  material.rs  resources.rs
bevy_crates/bevy_ragnarok_grf/: Cargo.toml
bevy_crates/bevy_ragnarok_grf/src/: lib.rs
bevy_crates/bevy_ragnarok_pal/: Cargo.toml
bevy_crates/bevy_ragnarok_pal/src/: lib.rs
bevy_crates/bevy_ragnarok_quad_tree/: Cargo.toml
bevy_crates/bevy_ragnarok_quad_tree/examples/: track_entity.rs
bevy_crates/bevy_ragnarok_quad_tree/src/: lib.rs  plugin.rs
bevy_crates/bevy_ragnarok_rsm/: Cargo.toml
bevy_crates/bevy_ragnarok_rsm/examples/: load_rsm.rs
bevy_crates/bevy_ragnarok_rsm/src/: debug.rs  extensions.rs  lib.rs
bevy_crates/bevy_ragnarok_spr/: Cargo.toml
bevy_crates/bevy_ragnarok_spr/src/: lib.rs
bevy_crates/bevy_ragnarok_water_plane/: Cargo.toml
bevy_crates/bevy_ragnarok_water_plane/examples/: waves.rs
bevy_crates/bevy_ragnarok_water_plane/src/: lib.rs  plugin.rs
ragnarok_debugger/: Cargo.toml
ragnarok_rebuild_assets/: Cargo.toml
ragnarok_rebuild_assets/src/: lib.rs
ragnarok_rebuild_assets/src/act/: action_frame.rs  actor_action.rs  anchor_point.rs  animation_clip.rs  animation_event.rs  error.rs  frame_event.rs  frame_layer.rs  mod.rs
ragnarok_rebuild_assets/src/common/: color.rs  mod.rs  version.rs  water_plane.rs
ragnarok_rebuild_assets/src/gat/: error.rs  mod.rs  tile.rs
ragnarok_rebuild_assets/src/gnd/: error.rs  lightmap.rs  mod.rs  surface.rs
ragnarok_rebuild_assets/src/grf/: entry.rs  error.rs  header.rs  mod.rs
ragnarok_rebuild_assets/src/imf/: animation.rs  error.rs  frame.rs  layer.rs  mod.rs
ragnarok_rebuild_assets/src/pal/: error.rs  mod.rs
ragnarok_rebuild_assets/src/rsm/: error.rs  mod.rs  volume_box.rs
ragnarok_rebuild_assets/src/rsw/: bounding_box.rs  effect.rs  error.rs  light.rs  mod.rs  model.rs  quad_tree.rs  sound.rs
ragnarok_rebuild_assets/src/spr/: error.rs  indexed.rs  mod.rs  true_color.rs
ragnarok_rebuild_bevy/: Cargo.toml
ragnarok_rebuild_bevy/benches/: create_render_device.rs  load_map_from_cold_start.rs
ragnarok_rebuild_bevy/src/: lib.rs
ragnarok_rebuild_bevy/src/assets/: act_asset.rs  actor_asset.rs  grf_asset_reader.rs  mod.rs  palette_asset.rs  paths.rs  sprite_asset.rs
ragnarok_rebuild_bevy/src/audio/: components.rs  events.rs  mod.rs  resources.rs
ragnarok_rebuild_bevy/src/components/: world.rs
ragnarok_rebuild_bevy/src/debug/: gnd_debug.rs  mod.rs  rsm_debug.rs  rsw_debug.rs  show_rsm_normals.rs
ragnarok_rebuild_bevy/src/helper/: aabb_ext.rs  mod.rs
ragnarok_rebuild_bevy/src/materials/: gnd.rs  mod.rs  rsm.rs  spr.rs  water_plane.rs
ragnarok_rebuild_bevy/src/resources/: mod.rs
ragnarok_rebuild_bevy/src/tables/: mod.rs  name_table.rs  system_sets.rs
ragnarok_rebuild_bevy/src/water_plane/: component.rs  mod.rs  system.rs
ragnarok_rebuild_bevy/src/world/: components.rs  events.rs  mod.rs
ragnarok_rebuild_client/: BGM  Cargo.toml  System
ragnarok_rebuild_client/src/: inspector_egui.rs  main.rs
ragnarok_rebuild_client/src/client/: components.rs  loading_screen.rs  mod.rs  plugin.rs  resources.rs
ragnarok_rebuild_client/src/states/: game.rs  mod.rs
ragnarok_rebuild_client/src/world/: event.rs  mod.rs
ragnarok_rebuild_common/: Cargo.toml
ragnarok_rebuild_common/src/: color.rs  euc_kr.rs  lib.rs  version.rs  warning.rs  water_plane.rs
ragnarok_rebuild_common/src/act/: action_frame.rs  actor_action.rs  anchor_point.rs  error.rs  frame_event.rs  frame_layer.rs  mod.rs
ragnarok_rebuild_common/src/assets/: mod.rs
ragnarok_rebuild_common/src/buf_reader_ext/: mod.rs
ragnarok_rebuild_common/src/des/: block.rs  mod.rs  tables.rs
ragnarok_rebuild_common/src/grf/: entry.rs  error.rs  header.rs  mod.rs
ragnarok_rebuild_common/src/reader_ext/: mod.rs
ragnarok_rebuild_common/src/spr/: asset_loader.rs  error.rs  mod.rs
ragnarok_rebuild_server/: Cargo.toml
(+155 files in other folders)
