[workspace]
members = [
    "ragnarok_rebuild_common",
    "ragnarok_rebuild_assets",
    "ragnarok_rebuild_bevy",
    "ragnarok_rebuild_client",
    # "ragnarok_rebuild_server",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.16.0", default-features = false }
bevy-inspector-egui = { version = "0.31.0" }
bevy_flycam = { version = "0.15.0" }
# iyes_perf_ui = { version = "0.3" }

log = "0.4.25"

futures = "0.3.31"

tungstenite = "0.23.0"
url = "2.4.1"

uuid = "1.12.1"
serde = "1.0.217"
toml = "0.8.20"

flate2 = "1.0"
encoding_rs = "0.8.35"

sqlx = { version = "0.8.0", features = [
    "runtime-async-std",
    "postgres",
    "uuid",
] }

wgpu = "23.0.1"
criterion = "0.5.1"

[workspace.lints.clippy]
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
