[workspace]
members = [
    "asset_crates/ragnarok_rsm",
    "ragnarok_rebuild_common",
    "ragnarok_rebuild_assets",
    "ragnarok_rebuild_bevy",
    "ragnarok_rebuild_client",
    # "ragnarok_rebuild_server",
    "ragnarok_debugger",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.16.0", default-features = false }
bevy_animation = { version = "0.16.0", default-features = false }
bevy_app = { version = "0.16.0", default-features = false }
bevy_asset = { version = "0.16.0", default-features = false }
bevy_color = { version = "0.16.0", default-features = false }
bevy_ecs = { version = "0.16.0", default-features = false }
bevy_gizmos = { version = "0.16.0", default-features = false }
bevy_image = { version = "0.16.0", default-features = false }
bevy_log = { version = "0.16.0", default-features = false }
bevy_math = { version = "0.16.0", default-features = false }
bevy_mesh = { version = "0.16.0", default-features = false }
bevy_pbr = { version = "0.16.0", default-features = false }
bevy_platform = { version = "0.16.0", default-features = false }
bevy_reflect = { version = "0.16.0", default-features = false }
bevy_render = { version = "0.16.0", default-features = false }
bevy_scene = { version = "0.16.0", default-features = false }
bevy_transform = { version = "0.16.0", default-features = false }

bevy-inspector-egui = { version = "0.31.0" }
bevy_flycam = { git = "https://github.com/kSDOT/bevy_flycam/", branch = "bevy-0.16.0-update" }
# iyes_perf_ui = { version = "0.3" }

log = "0.4.25"

futures = "0.3.31"

tungstenite = "0.23.0"
url = "2.4.1"

uuid = "1.12.1"
serde = "1.0.217"
toml = "0.8.20"

flate2 = "1.0"
encoding_rs = "0.8.35"

sqlx = { version = "0.8.0", features = [
    "runtime-async-std",
    "postgres",
    "uuid",
] }

wgpu = "24.0.3"
criterion = "0.5.1"

[workspace.lints.clippy]
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
