[workspace]
members = [
  "asset_crates/ragnarok_act",
  "asset_crates/ragnarok_gat",
  "asset_crates/ragnarok_grf",
  "asset_crates/ragnarok_pal",
  "asset_crates/ragnarok_rsm",
  "asset_crates/ragnarok_rsw",
  "asset_crates/ragnarok_spr",
  "bevy_crates/bevy_ragnarok_act",
  "bevy_crates/bevy_ragnarok_gat",
  "bevy_crates/bevy_ragnarok_grf",
  "bevy_crates/bevy_ragnarok_pal",
  "bevy_crates/bevy_ragnarok_rsm",
  "bevy_crates/bevy_ragnarok_rsw",
  "bevy_crates/bevy_ragnarok_spr",
  "bevy_crates/bevy_ragnarok_quad_tree",
  "ragnarok_rebuild_common",
  "ragnarok_rebuild_assets",
  "ragnarok_rebuild_bevy",
  "ragnarok_rebuild_client",
  # "ragnarok_rebuild_server",
]
resolver = "2"

[workspace.dependencies]
ragnarok_act = { path = "asset_crates/ragnarok_act", default-features = false }
ragnarok_gat = { path = "asset_crates/ragnarok_gat", default-features = false }
ragnarok_grf = { path = "asset_crates/ragnarok_grf", default-features = false }

bevy_ragnarok_act = { path = "bevy_crates/bevy_ragnarok_act", default-features = false }
bevy_ragnarok_gat = { path = "bevy_crates/bevy_ragnarok_gat", default-features = false }
bevy_ragnarok_grf = { path = "bevy_crates/bevy_ragnarok_grf", default-features = false }
bevy_ragnarok_pal = { path = "bevy_crates/bevy_ragnarok_pal", default-features = false }
bevy_ragnarok_rsm = { path = "bevy_crates/bevy_ragnarok_rsm", default-features = false }
bevy_ragnarok_rsw = { path = "bevy_crates/bevy_ragnarok_rsw", default-features = false }
bevy_ragnarok_spr = { path = "bevy_crates/bevy_ragnarok_spr", default-features = false }

bevy_ragnarok_quad_tree = { path = "bevy_crates/bevy_ragnarok_quad_tree", default-features = false }

bevy = { version = "0.17.0-rc.1", default-features = false }
bevy_animation = { version = "0.17.0-rc.1", default-features = false }
bevy_app = { version = "0.17.0-rc.1", default-features = false }
bevy_asset = { version = "0.17.0-rc.1", default-features = false }
bevy_audio = { version = "0.17.0-rc.1", default-features = false }
bevy_camera = { version = "0.17.0-rc.1", default-features = false }
bevy_color = { version = "0.17.0-rc.1", default-features = false }
bevy_core_pipeline = { version = "0.17.0-rc.1", default-features = false }
bevy_derive = { version = "0.17.0-rc.1", default-features = false }
bevy_ecs = { version = "0.17.0-rc.1", default-features = false }
bevy_gizmos = { version = "0.17.0-rc.1", default-features = false }
bevy_image = { version = "0.17.0-rc.1", default-features = false }
bevy_light = { version = "0.17.0-rc.1", default-features = false }
bevy_log = { version = "0.17.0-rc.1", default-features = false }
bevy_math = { version = "0.17.0-rc.1", default-features = false }
bevy_mesh = { version = "0.17.0-rc.1", default-features = false }
bevy_pbr = { version = "0.17.0-rc.1", default-features = false }
bevy_platform = { version = "0.17.0-rc.1", default-features = false }
bevy_ptr = { version = "0.17.0-rc.1", default-features = false }
bevy_reflect = { version = "0.17.0-rc.1", default-features = false }
bevy_render = { version = "0.17.0-rc.1", default-features = false }
bevy_scene = { version = "0.17.0-rc.1", default-features = false }
bevy_shader = { version = "0.17.0-rc.1", default-features = false }
bevy_transform = { version = "0.17.0-rc.1", default-features = false }
bevy_time = { version = "0.17.0-rc.1", default-features = false }

bevy_egui = { version = "0.36.0" }
bevy-inspector-egui = { version = "0.33.1" }
bevy_flycam = { version = "0.16.1" }
iyes_perf_ui = { version = "0.5.0" }

log = "0.4.28"

futures = "0.3.31"

tungstenite = "0.27.0"
url = "2.5.7"

uuid = "1.18.1"
serde = "1.0.224"
toml = "0.9.6"

flate2 = "1.1.2"
encoding_rs = "0.8.35"

sqlx = { version = "0.8.6", features = [
  "runtime-async-std",
  "postgres",
  "uuid",
] }

wgpu = "25.0.2"
criterion = "0.7.0"

[workspace.lints.clippy]
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
