[package]
name = "ragnarok_debugger"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
ragnarok_rebuild_assets = { path = "../ragnarok_rebuild_assets" }
ragnarok_rsm = { path = "../asset_crates/ragnarok_rsm", features = ["warning"] }
