[package]
name = "ragnarok_rebuild_bevy"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[lints]
workspace = true

[dependencies]
ragnarok_rebuild_common = { path = "../ragnarok_rebuild_common" }
ragnarok_rebuild_assets = { path = "../ragnarok_rebuild_assets" }

bevy = { workspace = true }
futures = { workspace = true }

tungstenite = { workspace = true }
url = { workspace = true }

uuid = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

flate2 = { workspace = true }
encoding_rs = { workspace = true }

sqlx = { workspace = true }
