[package]
name = "ragnarok_rebuild_bevy"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["audio"]
audio = ["bevy/bevy_audio"]
debug = ["bevy/bevy_gizmos"]

[lints]
workspace = true

[dependencies]
ragnarok_rebuild_common = { path = "../ragnarok_rebuild_common" }
ragnarok_rebuild_assets = { path = "../ragnarok_rebuild_assets" }

bevy = { workspace = true, features = [
  "bevy_animation",
  "bevy_asset",
  "bevy_pbr",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_log",
  "jpeg",
  "bmp",
  "tga",
  "wav",
  "mp3",
  "tonemapping_luts",
] }
futures = { workspace = true }

tungstenite = { workspace = true }
url = { workspace = true }

uuid = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

flate2 = { workspace = true }
encoding_rs = { workspace = true }

sqlx = { workspace = true }
