[package]
name = "ragnarok_rebuild_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
with-inspector = [
    "bevy-inspector-egui",
    "bevy_flycam",
    # "iyes_perf_ui",
    "ragnarok_rebuild_bevy/debug",
    "bevy/default_font",
    "bevy/file_watcher",
    "bevy/embedded_watcher",
    "ragnarok_pal/debug",
    "ragnarok_rsm/debug",
]

[dependencies]
ragnarok_grf = { path = "../asset_crates/ragnarok_grf", features = ["bevy"] }
ragnarok_pal = { path = "../asset_crates/ragnarok_pal", features = ["bevy"] }
ragnarok_rsm = { path = "../asset_crates/ragnarok_rsm", features = ["bevy"] }
ragnarok_spr = { path = "../asset_crates/ragnarok_spr", features = ["bevy"] }
ragnarok_rebuild_common = { path = "../ragnarok_rebuild_common" }
ragnarok_rebuild_bevy = { path = "../ragnarok_rebuild_bevy" }

bevy = { workspace = true, default-features = false, features = [
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "wayland",
    "trace",
    "multi_threaded",
] }
bevy-inspector-egui = { workspace = true, optional = true }
bevy_flycam = { workspace = true, optional = true }
# iyes_perf_ui = { workspace = true, optional = true }

tungstenite = { workspace = true }
url = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
