[package]
name = "ragnarok_rebuild_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
with-inspector = [
  # "bevy-inspector-egui",
  # "bevy_flycam",
  # "iyes_perf_ui",
  "ragnarok_rebuild_bevy/debug",
  "bevy/default_font",
  "bevy/file_watcher",
  "bevy/embedded_watcher",
  "bevy_ragnarok_act/debug",
  "bevy_ragnarok_pal/debug",
  "bevy_ragnarok_rsm/debug",
]

[dependencies]
bevy_ragnarok_grf = { workspace = true }
bevy_ragnarok_act = { workspace = true }
bevy_ragnarok_pal = { workspace = true }
bevy_ragnarok_rsm = { workspace = true }
bevy_ragnarok_rsw = { workspace = true }
bevy_ragnarok_spr = { workspace = true }
ragnarok_rebuild_common = { path = "../ragnarok_rebuild_common" }
ragnarok_rebuild_bevy = { path = "../ragnarok_rebuild_bevy" }

bevy = { workspace = true, default-features = false, features = [
  "bevy_animation",
  "bevy_pbr",
  "bevy_post_process",
  "bevy_remote",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite_render",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "wayland",
  "animation",
  "multi_threaded",
  "reflect_auto_register",
  "sysinfo_plugin",
  "tonemapping_luts",
  "trace",
  "zstd_rust",
] }
# bevy-inspector-egui = { workspace = true, optional = true }
# bevy_flycam = { workspace = true, optional = true }
# iyes_perf_ui = { workspace = true, optional = true }

tungstenite = { workspace = true }
url = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
