[package]
name = "ragnarok_rebuild_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
log = "0.4.20"

tungstenite = { workspace = true }
url = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }

flate2 = { workspace = true }
encoding_rs = { workspace = true }

sqlx = { workspace = true }