[package]
name = "ragnarok_grf"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
bevy = ["dep:bevy_asset", "dep:futures"]

[dependencies]
ragnarok_rebuild_common = { path = "../../ragnarok_rebuild_common" }

bevy_asset = { workspace = true, default-features = false, optional = true }

log = { workspace = true }

flate2 = { workspace = true }
encoding_rs = { workspace = true }
futures = { workspace = true, optional = true }
