[package]
name = "ragnarok_pal"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
bevy = [
    "dep:bevy_app",
    "dep:bevy_asset",
    "dep:bevy_color",
    "dep:bevy_ecs",
    "dep:bevy_image",
    "dep:bevy_reflect",
    "dep:bevy_render",
]
debug = []

[dependencies]
ragnarok_rebuild_common = { path = "../../ragnarok_rebuild_common" }

bevy_app = { workspace = true, default-features = false, optional = true }
bevy_asset = { workspace = true, default-features = false, optional = true }
bevy_color = { workspace = true, default-features = false, optional = true }
bevy_ecs = { workspace = true, default-features = false, optional = true }
bevy_image = { workspace = true, default-features = false, optional = true }
bevy_reflect = { workspace = true, default-features = false, optional = true }
bevy_render = { workspace = true, default-features = false, optional = true }
