[package]
name = "ragnarok_rsm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
# Warnings while loading the rsm
warning = ["ragnarok_rebuild_common/warning"]

[dependencies]
ragnarok_grf = { workspace = true, optional = true }
ragnarok_rebuild_common = { path = "../../ragnarok_rebuild_common" }

log = { workspace = true }

[[bin]]
name = "rsm_debug"
required-features = ["warning", "ragnarok_grf"]
