[package]
name = "ragnarok_rsw"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
# Warnings while loading the rsw
warning = ["ragnarok_rebuild_common/warning"]

[dependencies]
ragnarok_grf = { workspace = true, optional = true }
ragnarok_rebuild_common = { path = "../../ragnarok_rebuild_common" }

log = { workspace = true }

serde = { workspace = true }
flate2 = { workspace = true }
encoding_rs = { workspace = true }

[[bin]]
name = "rsw_debug"
required-features = ["warning", "ragnarok_grf"]
