[package]
name = "ragnarok_spr"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
bevy = [
    "dep:bevy_app",
    "dep:bevy_asset",
    "dep:bevy_color",
    "dep:bevy_ecs",
    "dep:bevy_image",
    "dep:bevy_math",
    "dep:bevy_mesh",
    "dep:bevy_pbr",
    "dep:bevy_reflect",
    "dep:bevy_render",
]
# Warnings for the spr asset
warning = ["ragnarok_rebuild_common/warning"]
# Graphical debugging of meshes
debug = []

[dependencies]
ragnarok_pal = { path = "../ragnarok_pal" }
ragnarok_rebuild_common = { path = "../../ragnarok_rebuild_common" }

bevy_app = { workspace = true, default-features = false, optional = true }
bevy_asset = { workspace = true, default-features = false, optional = true }
bevy_color = { workspace = true, default-features = false, optional = true }
bevy_ecs = { workspace = true, default-features = false, optional = true }
bevy_image = { workspace = true, default-features = false, optional = true }
bevy_math = { workspace = true, default-features = false, optional = true }
bevy_mesh = { workspace = true, default-features = false, optional = true }
bevy_pbr = { workspace = true, default-features = false, optional = true }
bevy_reflect = { workspace = true, default-features = false, optional = true }
bevy_render = { workspace = true, default-features = false, optional = true }
