[package]
name = "bevy_ragnarok_camera"
version = "0.1.0"
edition = "2024"

[features]
reflect = ["bevy_reflect"]

[dependencies]
bevy_app = { workspace = true }
bevy_camera = { workspace = true }
bevy_ecs = { workspace = true }
bevy_log = { workspace = true }
bevy_math = { workspace = true }
bevy_reflect = { workspace = true, optional = true }
bevy_transform = { workspace = true }
