[package]
name = "bevy_ragnarok_quad_tree"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
debug = []
reflect = ["dep:bevy_reflect"]

[dependencies]
bevy_app = { workspace = true, default-features = false }
bevy_camera = { workspace = true, default-features = false }
bevy_ecs = { workspace = true, default-features = false }
bevy_log = { workspace = true, default-features = false }
bevy_math = { workspace = true, default-features = false }
bevy_reflect = { workspace = true, default-features = false, optional = true }
bevy_transform = { workspace = true, default-features = false }
bevy_gizmos = { workspace = true, default-features = false }

[dev-dependencies]
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_light",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_window",
    "bevy_winit",
    "tonemapping_luts",
    "wayland",
    "zstd_rust",
] }
